--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,10 @@
 			<artifactId>h2</artifactId>
 			<scope>test</scope>
 		</dependency>
-
+<dependency>
+	<groupId>org.postgresql</groupId>
+	<artifactId>postgresql</artifactId>
+</dependency> 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -65,7 +68,11 @@
 			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		
+		<dependency>
+		<groupId>org.springdoc</groupId>
+		<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+		<version>2.0.2</version>
+	 </dependency>
 
 		<dependency>
     	<groupId>org.springframework.boot</groupId>
